# photo-manager-server

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  export_database_url.sh
migrations/2023-07-03-202440_create_images/: up.sql
sql/: create_database.sql
src/: api.rs  database.rs  demo_routing.rs  domain.rs  image_server.rs  lib.rs  main.rs  persistence.rs  schema.rs  server_tracing.rs  state.rs
src/api/: canon.rs  demo_routing.rs  error_handling.rs  image_dimensions.rs  image_server.rs  request_tracing.rs  routing.rs
src/api/routing/: image.rs  ping.rs
src/api/routing/image/: add.rs  current.rs  delete.rs  get.rs  paginated.rs  rename.rs  resolve.rs  take_next.rs  update_canon.rs  upload.rs
src/database/: image_manager.rs  models.rs
src/database/entities/: images.rs
src/database/migrator/: m20230707_014242_create_images_table.rs  mod.rs
src/domain/: actions.rs  models.rs  repos.rs  screen_saver_manager.rs  screensaver.rs
src/domain/actions/: image.rs  images.rs
src/domain/repos/: images.rs
src/persistence/: db_image.rs  image.rs  image_manager.rs  persistence_manager.rs
src/persistence/db_image/: db_image_canon_fetcher.rs  db_image_canon_updater.rs  db_image_fetcher.rs  db_image_getter.rs  db_image_saver.rs  db_paginated_images_fetcher.rs
src/persistence/entities/: images.rs  mod.rs  prelude.rs
src/persistence/image/: delete_image.rs  fetch_canon.rs  fetch_image.rs  fetch_images_page.rs  image_canon_fetcher.rs  image_canon_updater.rs  image_deleter.rs  image_fetcher.rs  image_renamer.rs  image_saver.rs  paginated_images_fetcher.rs  rename_image.rs  save_image.rs  update_canon.rs
src/persistence/migrator/: m20230708_223818_add_image_size_columns.rs  m20230708_231248_remove_width_and_height_defaults.rs  mod.rs
src/state/: screensaver_manager.rs  screensaver_state.rs
