[package]
name = "photo_manager_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
axum = { version = "0.6.18", features = ["headers", "http2", "macros", "multipart", "tracing"] }
dotenvy = "0.15.7"
futures = "0.3.28"
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "runtime", "tcp"] }
image = "0.24.6"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.11.3"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.8", features = ["io"] }
tower-http = { version = "0.4.1", features = ["fs", "limit", "trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
