[package]
name = "photo_manager_server"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
auto_impl = "1.1.2"
axum = { version = "0.7.4", features = ["http2", "macros", "multipart", "tracing"] }
axum-extra = { version = "0.9.2" }
dotenvy = "0.15.7"
futures = "0.3.30"
http-body-util = "0.1.0"
image = "0.24.8"
rand = "0.8.5"
sea-orm = { version = "0.12.14", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "0.12.14"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["io"] }
tower-http = { version = "0.5.1", features = ["fs", "limit", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
